<resources>
    <string name="app_name">Pandemic Queue</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_user">Example user</string>
    <string name="example_title">Example title</string>
    <string name="store_logo">Store Logo</string>
    <string name="get_ticket">Get ticket</string>

    <string name="google_maps_api_key">AIzaSyAYEHnK6GKTon6Ha65T_akUz3i8O8vHWKI</string>
    <string name="cancel_ticket">Cancel Ticket</string>
    <string name="ticket_canceled">Ticket canceled.</string>
    <string name="ticket_reserved">Ticket reserved.</string>
    <string name="search_hint">Type…</string>
    <string name="action_search">Search</string>
</resources>
