<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/store_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <ImageView
            android:id="@+id/store_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/store_logo"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/store_image"
            android:text="@string/example_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_name"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/store_image"
            android:text="@string/example_user"
            tools:layout_editor_absoluteX="@dimen/default_margin" />


        <TextView
            android:id="@+id/store_number_waiting_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_name"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="@dimen/default_margin" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
