<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/store_details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.store.StoreFragment">

    <RelativeLayout
        android:id="@+id/title_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="4dp">

        <ImageView
            android:id="@+id/store_details_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/store_logo"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/store_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_toStartOf="@+id/store_details_image"
            android:text="@string/example_title"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/store_details_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_placeholder"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginBottom="16dp"
        android:text="@string/example_user"
        tools:layout_editor_absoluteX="@dimen/default_margin" />

    <TextView
        android:id="@+id/store_details_tickets_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_details_location"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginBottom="16dp"
        android:text="@string/example_user"
        tools:layout_editor_absoluteX="@dimen/default_margin" />

    <TextView
        android:id="@+id/store_details_lastOnQueue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_details_tickets_waiting"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginBottom="16dp"
        android:text="@string/example_user"
        tools:layout_editor_absoluteX="@dimen/default_margin" />


    <TextView
        android:id="@+id/store_details_lastEnteredStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_details_lastOnQueue"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginBottom="16dp"
        android:text="@string/example_user"
        tools:layout_editor_absoluteX="@dimen/default_margin" />


    <TextView
        android:id="@+id/store_details_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_details_lastEnteredStore"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginBottom="16dp"
        android:text="@string/example_user"
        tools:layout_editor_absoluteX="@dimen/default_margin" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/store_details_capacity" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mapView"

        android:layout_alignParentEnd="true"
        android:text="@string/get_ticket" />

</RelativeLayout>