<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_store_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    tools:context=".ui.store.StoreFragment">

    <RelativeLayout
        android:id="@+id/title_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="4dp">

        <ImageView
            android:id="@+id/store_details_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/store_logo"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/store_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_toStartOf="@+id/store_details_image"
            android:text="@string/example_title"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_placeholder">

        <TextView
            android:id="@+id/labelLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="Location"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store_details_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/example_user"
            tools:layout_editor_absoluteX="@dimen/default_margin" />

        <TextView
            android:id="@+id/labelnWaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_location"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="Number people waiting"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store_details_tickets_waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_location"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/example_user"
            tools:layout_editor_absoluteX="@dimen/default_margin" />

        <TextView
            android:id="@+id/labelCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_tickets_waiting"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="Capacity"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store_details_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_tickets_waiting"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/example_user"
            tools:layout_editor_absoluteX="@dimen/default_margin" />

        <TextView
            android:id="@+id/labelLastOnQueue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_capacity"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="Last person arrived on queue at"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/store_details_lastOnQueue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_capacity"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/example_user"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="@dimen/default_margin" />

        <TextView
            android:id="@+id/labelLastEnteredStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_lastOnQueue"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="Last person entered the store at"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/store_details_lastEnteredStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_lastOnQueue"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/example_user"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="@dimen/default_margin" />

        <Button
            android:id="@+id/button_create_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_lastEnteredStore"
            android:layout_alignParentEnd="true"
            android:text="@string/get_ticket" />

        <Button
            android:id="@+id/button_cancel_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_details_lastEnteredStore"
            android:layout_alignParentEnd="true"
            android:text="@string/cancel_ticket"
            android:visibility="gone" />
    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/store_details_mapView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_placeholder"
        android:layout_alignParentBottom="true" />


</RelativeLayout>